<?xml version="1.0"?>
<package format="3">
  <name>tello_vo</name>
  <version>0.0.1</version>
  <description>Monocular visual odometry node for Tello in ROS 2 Foxy.</description>
  <maintainer email="vboxuser@todo.todo">vboxuser</maintainer>
  <license>Apache-2.0</license>

  <!-- ament_python 是这个包的 build tool -->
  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

